# starprobe

./: .env.example  .gitignore  .gitmodules  .mcp.json  Dockerfile  README.md  docker-compose.dev.override.yml  docker-compose.test.override.yml  docker-compose.yml  entrypoint.sh  justfile  pyproject.toml
.codex/: AGENTS.md
.gemini/: settings.json
.github/workflows/: ci-workflows.yml  push-img.yml  run-docker-tests.yml  run-linters.yml  run-local-tests.yml  run-tests.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_conventions.md  suggested_commands.md  task_completion.md
demo/: example.py  test_clients.py
dev/: __init__.py
dev/mocks/: __init__.py  mock_duckduckgo_client.py  mock_mlx_client.py  mock_ollama_client.py  mock_scraping_service.py  mock_search_client.py
ollama/: Dockerfile
sdk/: mock_ollama_deep_researcher_client.py
sdk/mock_ollama_deep_researcher_client/: mock_ollama_deep_researcher_client.py
sdk/mock_olm_d_rch_client/: mock_olm_d_rch_client.py
sdk/olm_d_rch_sdk/: __init__.py
sdk/olm_d_rch_sdk/client/: __init__.py  research_api_client.py
sdk/olm_d_rch_sdk/mocks/: __init__.py  mock_research_api_client.py
sdk/olm_d_rch_sdk/protocols/: __init__.py  research_client_protocol.py
sdk/olm_d_rch_sdk/research_api_client/: __init__.py  mock_research_api_client.py  research_api_client.py  research_client_protocol.py  schemas.py
sdk/tests/: test_research_api_client.py
src/ollama_deep_researcher/: container.py  graph.py  settings.py  state.py  utils.py
src/ollama_deep_researcher/api/: main.py  router.py  schemas.py
src/ollama_deep_researcher/clients/: __init__.py  ddgs_client.py  duckduckgo_client.py  ollama_client.py  searxng_client.py
src/ollama_deep_researcher/config/: ddgs_settings.py  ollama_settings.py  scraping_settings.py  workflow_settings.py
src/ollama_deep_researcher/graph/: graph.py  state.py
src/ollama_deep_researcher/models/: scraping_model.py
src/ollama_deep_researcher/nodes/: __init__.py  finalize_summary.py  generate_query.py  reflect_on_summary.py  route_research.py  summarize_sources.py  web_research.py
src/ollama_deep_researcher/protocols/: __init__.py  duckduckgo_client_protocol.py  ollama_client_protocol.py  scraping_model_protocol.py  search_client_protocol.py
src/ollama_deep_researcher/services/: __init__.py  llm_service.py  prompt_service.py  research_service.py  scraping_service.py  search_service.py  text_processing_service.py
src/olm_d_rch/: container.py  dependencies.py  graph.py  state.py
src/olm_d_rch/api/: main.py  router.py  schemas.py
src/olm_d_rch/clients/: __init__.py  mlx_client.py  ollama_client.py  stl_conn_adapter.py
src/olm_d_rch/config/: __init__.py  app_settings.py  ddgs_settings.py  mlx_settings.py  ollama_settings.py  scraping_settings.py  stl_conn_settings.py
src/olm_d_rch/nodes/: __init__.py  finalize_summary.py  generate_query.py  node1_refine_query.py  node2_conduct_web_search.py  node3_summarize_sources.py  node4_finalize_summary.py  reflect_on_summary.py  route_research.py  summarize_sources.py  (+1 more)
src/starprobe/: dependencies.py  graph.py  state.py
tests/: conftest.py  envs.py  test_duckduckgo_comparison.py
tests/e2e/: conftest.py
tests/fixtures/: mock_responses.py
tests/intg/: conftest.py  test_api.py  test_demo.py
tests/mock/: test_dependency_container.py  test_mock_duckduckgo_client.py  test_mock_scraping_service.py
tests/sdk/: conftest.py  test_mock_sdk_schema_compatibility.py  test_research_api_client.py
tests/unit/: conftest.py  test_dependencies.py  test_dependency_container.py  test_graph_nodes.py  test_mock_llm_fixtures.py  test_scraping.py
(+75 files in other folders)
