[project]
name = "olm-d-rch"
version = "0.0.1"
description = "A FastAPI service for web research and summarization."
authors = [
    { name = "akitorahayashi" }
]
requires-python = ">=3.9"
dependencies = [
    "langgraph>=0.2.55",
    "langchain-community>=0.3.9",
    "langchain-ollama>=0.3.6",
    "httpx>=0.28.1",
    "python-dotenv==1.0.1",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-json-logger>=2.0.0",
    "requests",
    "beautifulsoup4",
    "tiktoken>=0.7.0",
    "jinja2>=3.1.0",
    "ddgs>=6.0.0",
    "mlx-lm>=0.1.0; platform_system == \"Darwin\" and platform_machine == \"arm64\"",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ruff>=0.6.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/olm_d_rch", "sdk/olm_d_rch_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"
addopts = "-v -s --tb=short"
pythonpath = ["."]

[tool.black]
target-version = ['py312']
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.cache
    | \.uv-cache
    | \.venv
    | venv
    | env
    | build
    | dist
    | .*/(bin|lib|share|etc)
    | .*/pyvenv\.cfg
)/
'''

[tool.ruff]
target-version = "py312"
exclude = [
    "__pycache__",
    "migrations",
    "db.sqlite3",
    "*.pyc",
    ".uv-cache",
    ".cache",
    "*/.cache/*",
    ".venv",
    "venv",
    "env",
    "*/bin/**",
    "*/lib/**",
    "*/share/**",
    "*/etc/**",
    "*/pyvenv.cfg"
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"] # E501 (line too long) is ignored

[project.optional-dependencies]
sdk = ["httpx>=0.27.0"]
